--- a/deploy/templates/express-mongo.yml
+++ b/deploy/templates/express-mongo.yml
@@ -50,4 +50,4 @@ spec:
     - protocol: TCP
       port: 8081
       targetPort: 8081
-      nodePort: 30000 # Uncomment for external service
+      # nodePort: 30000 # Uncomment for external service
