--- a/deploy/templates/pvc.yml
+++ b/deploy/templates/pvc.yml
@@ -9,4 +9,4 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  storageClassName: booksireadstorage
+  storageClassName: mongodb-storage
