--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       
       - name: "Build a Docker image from the repo v1"
         run:  | 
-          docker build -t abatan/bit-blog:${{ env.APP_VERSION }} frontend/
+          docker build -t abatan/bit-blog:${{ env.APP_VERSION }} .
 
       - name: "Log into Docker Hub"
         uses: docker/login-action@v3
